--- a/README
+++ b/README
@@ -24,6 +24,7 @@ ODROID-C4
 ODROID-HC4
 This board requires the boot switch to be pressed while powering up or 
 you will need to remove petitboot from the SPI flash if you want u-boot to be executed.
+ODROID-N2L
 
 x86-64:
 ODROID-h2
@@ -44,6 +45,14 @@ ODROID-hc4-hardkernel
 
 This boards still use either Hardkernel u-boot or kernel or both
 ODROID-c1: hard-kernel-uboot
+
+
+TODO:
+##############################################################
+
+Arm64:
+ODROID-M1
+
 
 Mali
 ################################################################
